--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                     <ul class="space-y-3 text-gray-400">
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1.5 mr-3 text-indigo-400"></i>
-                            <span>info@edumindharmony.com</span>
+                            <span>hodohodonosusume@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-clock mt-1.5 mr-3 text-indigo-400"></i>
