--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-semibold text-lg">メール</h4>
-                                    <p class="opacity-80">info@edumindharmony.com</p>
+                                    <p class="opacity-80">hodohodonosusume@gmail.com</p>
                                     <p class="text-xs opacity-60 mt-1">24時間以内に返信いたします</p>
                                 </div>
                             </div>
