--- a/index.html
+++ b/index.html
@@ -677,19 +677,19 @@
                 <div class="blog-card bg-white rounded-xl overflow-hidden shadow-lg" data-aos="fade-up" data-aos-delay="100">
                     <div class="h-48 bg-indigo-100 overflow-hidden">
                         <div class="w-full h-full flex items-center justify-center">
-                            <i class="fas fa-brain text-indigo-300 text-5xl"></i>
+                             <i class="fas fa-brain text-indigo-300 text-5xl"></i>
                         </div>
                     </div>
                     <div class="p-6">
                         <div class="flex items-center mb-4">
                             <span class="bg-indigo-100 text-indigo-800 text-xs px-3 py-1 rounded-full">メンタルケア</span>
-                            <span class="text-gray-400 text-sm ml-auto">2023.09.15</span>
+                            <span class="text-gray-400 text-sm ml-auto">2025.05.17</span>
                         </div>
                         <h3 class="font-bold text-xl mb-3">AIが検出する学習中のストレスサインと対処法</h3>
                         <p class="text-gray-600 mb-4">
                             学習中に現れる微細なストレスサインを早期に検出し、効果的な対処法を提供するAIアルゴリズムについて解説します。
                         </p>
-                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center">
+                        <a href="https://note.com/edumind_harmony/n/n877f3e7afad0" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                             続きを読む <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
@@ -697,20 +697,20 @@
 
                 <div class="blog-card bg-white rounded-xl overflow-hidden shadow-lg" data-aos="fade-up" data-aos-delay="200">
                     <div class="h-48 bg-green-100 overflow-hidden">
-                        <div class="w-full h-full flex items-center justify-center">
+                         <div class="w-full h-full flex items-center justify-center">
                             <i class="fas fa-chart-line text-green-300 text-5xl"></i>
                         </div>
                     </div>
                     <div class="p-6">
                         <div class="flex items-center mb-4">
                             <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full">金融教育</span>
-                            <span class="text-gray-400 text-sm ml-auto">2023.08.28</span>
+                            <span class="text-gray-400 text-sm ml-auto">2025.05.10</span>
                         </div>
                         <h3 class="font-bold text-xl mb-3">投資教育を家庭教師に依頼するメリット</h3>
                         <p class="text-gray-600 mb-4">
                             若いうちから金融リテラシーを身につけることの重要性と、家庭教師による実践的な投資教育のアプローチについて紹介します。
                         </p>
-                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center">
+                        <a href="https://note.com/edumind_harmony/n/n3182a7cd6ba1" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                             続きを読む <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
@@ -719,19 +719,19 @@
                 <div class="blog-card bg-white rounded-xl overflow-hidden shadow-lg" data-aos="fade-up" data-aos-delay="300">
                     <div class="h-48 bg-yellow-100 overflow-hidden">
                         <div class="w-full h-full flex items-center justify-center">
-                            <i class="fas fa-users text-yellow-300 text-5xl"></i>
+                           <i class="fas fa-users text-yellow-300 text-5xl"></i>
                         </div>
                     </div>
                     <div class="p-6">
                         <div class="flex items-center mb-4">
                             <span class="bg-yellow-100 text-yellow-800 text-xs px-3 py-1 rounded-full">不登校支援</span>
-                            <span class="text-gray-400 text-sm ml-auto">2023.07.10</span>
+                            <span class="text-gray-400 text-sm ml-auto">2025.05.10</span>
                         </div>
                         <h3 class="font-bold text-xl mb-3">保護者と共有する学習レポートの適切な範囲</h3>
                         <p class="text-gray-600 mb-4">
                             不登校の生徒のプライバシーを尊重しながら、保護者が適切にサポートするためのレポート共有の在り方について考察します。
                         </p>
-                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center">
+                        <a href="https://note.com/edumind_harmony/n/nf5207d9a7a08" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                             続きを読む <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
@@ -739,7 +739,7 @@
             </div>
 
             <div class="text-center">
-                <a href="#" class="btn-secondary" data-aos="fade-up">
+                <a href="https://note.com/edumind_harmony/" class="btn-secondary" data-aos="fade-up" target="_blank" rel="noopener noreferrer">
                     <i class="fas fa-book-open mr-2"></i>全ての記事を見る
                 </a>
             </div>
@@ -842,7 +842,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-semibold text-lg">メール</h4>
-                                    <p class="opacity-80">hodohodonosusume@gmail.com</p>
+                                    <p class="opacity-80">info@edumindharmony.com</p>
                                     <p class="text-xs opacity-60 mt-1">24時間以内に返信いたします</p>
                                 </div>
                             </div>
@@ -874,7 +874,7 @@
                     <div class="p-8 col-span-2 text-gray-800">
                         <h3 class="text-2xl font-bold mb-6">お問い合わせフォーム</h3>
 
-                        <form action="#" method="POST" class="space-y-6">
+                        <form action="mailto:hodohodonosusume@gmail.com" method="POST" enctype="text/plain" class="space-y-6">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                 <div>
                                     <label for="name" class="block text-gray-700 font-medium mb-2">お名前</label>
@@ -891,10 +891,10 @@
                                 <label for="subject" class="block text-gray-700 font-medium mb-2">お問い合わせ内容</label>
                                 <select id="subject" name="subject" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
                                     <option value="" selected disabled>選択してください</option>
-                                    <option value="trial">無料体験授業の申し込み</option>
-                                    <option value="consultation">無料相談の予約</option>
-                                    <option value="question">サービスについての質問</option>
-                                    <option value="other">その他</option>
+                                    <option value="無料体験授業の申し込み">無料体験授業の申し込み</option>
+                                    <option value="無料相談の予約">無料相談の予約</option>
+                                    <option value="サービスについての質問">サービスについての質問</option>
+                                    <option value="その他">その他</option>
                                 </select>
                             </div>
 
@@ -906,7 +906,9 @@
                             <div>
                                 <label class="flex items-center">
                                     <input type="checkbox" class="text-indigo-600 rounded" required>
-                                    <span class="ml-2 text-sm text-gray-600">プライバシーポリシーに同意します</span>
+                                    <span class="ml-2 text-sm text-gray-600">
+                                        <a href="privacy.html" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline">プライバシーポリシー</a>に同意します
+                                    </span>
                                 </label>
                             </div>
 
@@ -916,6 +918,7 @@
                                 </button>
                             </div>
                         </form>
+                         <p class="text-sm text-gray-600 mt-4">※「送信する」ボタンを押すと、お使いのメールソフトが起動し、メール作成画面が開きます。</p>
                     </div>
                 </div>
             </div>
@@ -963,8 +966,8 @@
                         <li><a href="#about" class="hover:text-white transition">サービス紹介</a></li>
                         <li><a href="#profile" class="hover:text-white transition">講師紹介</a></li>
                         <li><a href="#blog" class="hover:text-white transition">ブログ</a></li>
-                        <li><a href="#contact" class="hover:text-white transition">お問い合わせ</a></li>
-                        <li><a href="#" class="hover:text-white transition">プライバシーポリシー</a></li>
+                        <li><a href="privacy.html" class="hover:text-white transition">プライバシーポリシー</a></li>
+                        <li><a href="#" class="hover:text-white transition">お問い合わせ</a></li>
                     </ul>
                 </div>
 
@@ -973,7 +976,7 @@
                     <ul class="space-y-3 text-gray-400">
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1.5 mr-3 text-indigo-400"></i>
-                            <span>hodohodonosusume@gmail.com</span>
+                            <span>info@edumindharmony.com</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-clock mt-1.5 mr-3 text-indigo-400"></i>
