--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-semibold text-lg">メール</h4>
-                                    <p class="opacity-80">info@edumindharmony.com</p>
+                                    <p class="opacity-80">hodohodonosusume@gmail.com</p>
                                     <p class="text-xs opacity-60 mt-1">24時間以内に返信いたします</p>
                                 </div>
                             </div>
@@ -976,7 +976,7 @@
                     <ul class="space-y-3 text-gray-400">
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1.5 mr-3 text-indigo-400"></i>
-                            <span>info@edumindharmony.com</span>
+                            <span>hodohodonosusume@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-clock mt-1.5 mr-3 text-indigo-400"></i>
