--- a/privacy.html
+++ b/privacy.html
@@ -238,7 +238,7 @@ def consent_management(user):
                     <ul class="space-y-3 text-gray-400">
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1.5 mr-3 text-indigo-400"></i>
-                            <span>info@edumindharmony.com</span>
+                            <span>hodonohodnosusume@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-clock mt-1.5 mr-3 text-indigo-400"></i>
