--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                             </span>
                             <span class="bg-indigo-50 text-indigo-700 px-3 py-1 rounded-full text-sm">
                                 <i class="fas fa-utensils mr-1"></i>料理
-                            </span>
+                             </span>
                             <span class="bg-indigo-50 text-indigo-700 px-3 py-1 rounded-full text-sm">
                                 <i class="fas fa-microphone mr-1"></i>カラオケ
                             </span>
@@ -842,7 +842,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-semibold text-lg">メール</h4>
-                                    <p class="opacity-80">info@edumindharmony.com</p>
+                                    <p class="opacity-80">hodohodonosusume@gmail.com</p>
                                     <p class="text-xs opacity-60 mt-1">24時間以内に返信いたします</p>
                                 </div>
                             </div>
@@ -874,7 +874,7 @@
                     <div class="p-8 col-span-2 text-gray-800">
                         <h3 class="text-2xl font-bold mb-6">お問い合わせフォーム</h3>
 
-                        <form id="contactForm" action="#" method="POST" class="space-y-6">
+                        <form id="contactForm" action="https://formspree.io/f/xanoknao" method="POST" class="space-y-6">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                 <div>
                                     <label for="name" class="block text-gray-700 font-medium mb-2">お名前</label>
@@ -975,7 +975,7 @@
                     <ul class="space-y-3 text-gray-400">
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1.5 mr-3 text-indigo-400"></i>
-                            <span>info@edumindharmony.com</span>
+                            <span>hodohodonosusume@gmail.com</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-clock mt-1.5 mr-3 text-indigo-400"></i>
@@ -1075,46 +1075,10 @@
             });
         });
 
-        // Handle form submission to open email client
-        const contactForm = document.getElementById('contactForm');
-
-        if (contactForm) {
-            contactForm.addEventListener('submit', (e) => {
-                e.preventDefault(); // Prevent actual form submission
-
-                // Get form values
-                const name = document.getElementById('name').value;
-                const email = document.getElementById('email').value;
-                const subject = document.getElementById('subject').value;
-                const message = document.getElementById('message').value;
-
-                // Construct the email body string
-                const emailBody = `
-名前: ${name}
-メールアドレス: ${email}
-お問い合わせ内容: ${subject}
-
-メッセージ:
-${message}
-`;
-
-                // Encode subject and body for use in mailto link
-                const encodedSubject = encodeURIComponent(`お問い合わせ: ${subject}`); // 件名に「お問い合わせ: 」を付ける
-                const encodedBody = encodeURIComponent(emailBody);
-
-                // Create the mailto link
-                const mailtoLink = `mailto:hodohodonosusume@gmail.com?subject=${encodedSubject}&body=${encodedBody}`;
-
-                // Open the email client
-                window.location.href = mailtoLink; // This will trigger the default email client
-
-                // Optionally, show a message to the user
-                 alert('お問い合わせありがとうございます！メールソフトが起動しますので、内容をご確認の上送信してください。');
-
-                // Optionally, clear the form after opening the mail client
-                // contactForm.reset(); // Uncomment if you want to clear the form automatically
-            });
-        }
+        // Removed mailto link JS handler.
+        // The form will now submit directly to the URL specified in the action attribute.
+        // You need to replace 'https://your-form-service-endpoint' with the actual endpoint provided by your chosen form service.
+        // The form submission success/failure behavior will depend on the form service.
     </script>
 </body>
 </html>
