--- a/index.html
+++ b/index.html
@@ -685,9 +685,9 @@
                             <span class="bg-indigo-100 text-indigo-800 text-xs px-3 py-1 rounded-full">メンタルケア</span>
                             <span class="text-gray-400 text-sm ml-auto">2025.05.17</span>
                         </div>
-                        <h3 class="font-bold text-xl mb-3">AIが検出する学習中のストレスサインと対処法</h3>
+                        <h3 class="font-bold text-xl mb-3">【Edumindとは？】AIと人間の力で、不登校の子どもたちをまるごと支える新しい学びのかたち</h3>
                         <p class="text-gray-600 mb-4">
-                            学習中に現れる微細なストレスサインを早期に検出し、効果的な対処法を提供するAIアルゴリズムについて解説します。
+                            Edumindってどんなサービス？私が立ち上げた不登校支援サービス「Edumind（エデュマインド）」の全貌をご紹介します。
                         </p>
                         <a href="https://note.com/edumind_harmony/n/n877f3e7afad0" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                             続きを読む <i class="fas fa-arrow-right ml-2"></i>
@@ -706,9 +706,9 @@
                             <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full">金融教育</span>
                             <span class="text-gray-400 text-sm ml-auto">2025.05.10</span>
                         </div>
-                        <h3 class="font-bold text-xl mb-3">投資教育を家庭教師に依頼するメリット</h3>
+                        <h3 class="font-bold text-xl mb-3">AIは不登校の子どもを救えるのか？</h3>
                         <p class="text-gray-600 mb-4">
-                            若いうちから金融リテラシーを身につけることの重要性と、家庭教師による実践的な投資教育のアプローチについて紹介します。
+                            教育現場での活用と、人間との絶妙なバランス。「AIは不登校の子どもたちに本当に役立つのか？」というテーマでお話します。
                         </p>
                         <a href="https://note.com/edumind_harmony/n/n3182a7cd6ba1" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                             続きを読む <i class="fas fa-arrow-right ml-2"></i>
@@ -727,9 +727,9 @@
                             <span class="bg-yellow-100 text-yellow-800 text-xs px-3 py-1 rounded-full">不登校支援</span>
                             <span class="text-gray-400 text-sm ml-auto">2025.05.10</span>
                         </div>
-                        <h3 class="font-bold text-xl mb-3">保護者と共有する学習レポートの適切な範囲</h3>
+                        <h3 class="font-bold text-xl mb-3">不登校は「逃げ」じゃない。「選ぶ」という、強さだ。</h3>
                         <p class="text-gray-600 mb-4">
-                            不登校の生徒のプライバシーを尊重しながら、保護者が適切にサポートするためのレポート共有の在り方について考察します。
+                            不登校という選択について、不登校は本当に「逃げ」なのか、ということについてお話ししたいと思います。
                         </p>
                         <a href="https://note.com/edumind_harmony/n/nf5207d9a7a08" class="text-indigo-600 hover:text-indigo-800 font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                             続きを読む <i class="fas fa-arrow-right ml-2"></i>
